--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./style.css" />
     <title>Final Challenge CLR</title>
   </head>
   <body></body>
