Header markup ready

--- a/index.html
+++ b/index.html
@@ -12,5 +12,42 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Final Challenge CLR</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <section class="nav">
+        <div class="container">
+          <div class="logo-box">
+            <h2 class="logo">CLR</h2>
+          </div>
+          <nav class="main-nav">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">Sign In</a>
+            <a href="#" class="nav-link btn">Sign Up</a>
+          </nav>
+        </div>
+      </section>
+      <section class="hero">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h1 class="hero-text">
+                Responsive layouts
+                <span class="primary-text">don't have to be a struggle</span>
+              </h1>
+            </div>
+            <div class="col">
+              <p class="hero-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                culpa rerum fugit eligendi? Debitis perferendis modi eos
+                quibusdam.
+              </p>
+              <a href="#" class="btn">I want to learn</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
