Finished styling the nav

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
-    <title>Final Challenge CLR</title>
+    <title>Final Challenge CRL</title>
   </head>
   <body>
     <header class="main-header">
       <section class="nav">
         <div class="container">
           <div class="logo-box">
-            <h2 class="logo">CLR</h2>
+            <h2 class="logo">CRL</h2>
           </div>
           <nav class="main-nav">
             <a href="#" class="nav-link">Home</a>
