Styled the hero section

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <section class="hero">
         <div class="container">
           <div class="row">
-            <div class="col">
+            <div class="col hero-col-1">
               <h1 class="hero-text">
                 Responsive layouts
                 <span class="primary-text">don't have to be a struggle</span>
               </h1>
             </div>
-            <div class="col">
+            <div class="col hero-col-2">
               <p class="hero-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
                 culpa rerum fugit eligendi? Debitis perferendis modi eos
