--- a/index.html
+++ b/index.html
@@ -48,6 +48,37 @@
           </div>
         </div>
       </section>
+      <section class="section-one">
+        <div class="container row">
+          <div class="col">
+            <h2 class="section-one-header">Mobile First</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
+              molestiae. Temporibus, reiciendis facilis doloribus tenetur vero
+              perferendis magni delectus qui adipisci ullam! Saepe, cumque
+              velit.
+            </p>
+          </div>
+          <div class="col">
+            <h2 class="section-one-header">Efficient</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
+              molestiae. Temporibus, reiciendis facilis doloribus tenetur vero
+              perferendis magni delectus qui adipisci ullam! Saepe, cumque
+              velit.
+            </p>
+          </div>
+          <div class="col">
+            <h2 class="section-one-header">Done Right</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
+              molestiae. Temporibus, reiciendis facilis doloribus tenetur vero
+              perferendis magni delectus qui adipisci ullam! Saepe, cumque
+              velit.
+            </p>
+          </div>
+        </div>
+      </section>
     </header>
   </body>
 </html>
