Mark up for main section ready

--- a/index.html
+++ b/index.html
@@ -77,5 +77,60 @@
         </div>
       </div>
     </section>
+    <main class="main-section">
+      <div class="container row">
+        <div class="col">
+          <h2 class="main-header">It doesn't have to be so hard</h2>
+          <p class="main-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            debitis tempore earum cumque soluta harum similique alias.
+            Recusandae cum aspernatur eaque quod maiores nihil quae quas tenetur
+            corporis unde ratione nostrum non consequatur, soluta accusantium
+            ipsum maxime doloremque tempora officiis hic delectus vitae dolore
+            sequi ex. Velit omnis iste tenetur!
+          </p>
+          <div class="img-container">
+            <img src="./the-image.jpg" alt="main image" class="main-img" />
+          </div>
+          <p class="main-content">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            molestiae nam necessitatibus aspernatur similique facere hic magnam
+            aperiam harum commodi soluta voluptas tempora iste esse dolor sint
+            voluptate atque eligendi modi sequi, ratione illo ipsum quis. Id
+            quos nam voluptatibus laborum similique. Illo sunt nam nesciunt
+            molestiae reprehenderit quis consectetur?
+          </p>
+        </div>
+        <div class="col aside">
+          <div class="box">
+            <h2 class="box-title">Break it down</h2>
+            <p class="box-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+              debitis dolorum. Perferendis, doloribus suscipit nemo ratione
+              natus aliquid, adipisci laudantium repudiandae omnis eos in
+              necessitatibus.
+            </p>
+          </div>
+          <div class="box">
+            <h2 class="box-title">Work your way up</h2>
+            <p class="box-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+              debitis dolorum. Perferendis, doloribus suscipit nemo ratione
+              natus aliquid, adipisci laudantium repudiandae omnis eos in
+              necessitatibus.
+            </p>
+          </div>
+          <div class="box">
+            <h2 class="box-title">Don't give up</h2>
+            <p class="box-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+              debitis dolorum. Perferendis, doloribus suscipit nemo ratione
+              natus aliquid, adipisci laudantium repudiandae omnis eos in
+              necessitatibus.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
