--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Final Challenge CRL</title>
   </head>
   <body>
-    <header class="main-header">
+    <header class="header">
       <section class="nav">
         <div class="container">
           <div class="logo-box">
