Markup for footer

--- a/index.html
+++ b/index.html
@@ -132,5 +132,53 @@
         </div>
       </div>
     </main>
+
+    <footer class="main-footer">
+      <div class="container">
+        <h2 class="footer-header">just scratching the surface</h2>
+        <div class="row footer-row">
+          <div class="col footer-col-about">
+            <h3 class="footer-col-header">About Our Company</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur
+              expedita facere commodi reiciendis vel deleniti quasi unde,
+              necessitatibus praesentium nihil in itaque odio quidem quisquam.
+            </p>
+          </div>
+          <div class="col">
+            <h3 class="footer-col-header">Getting Around</h3>
+            <nav>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col">
+            <h3 class="footer-col-header">Other things</h3>
+            <nav>
+              <ul>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">dolor</a></li>
+                <li><a href="#">sit ament</a></li>
+                <li><a href="#">consectetur</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col">
+            <h3 class="footer-col-header">And more</h3>
+            <nav>
+              <ul>
+                <li><a href="#">Lorem Ipsum</a></li>
+                <li><a href="#">dolor</a></li>
+                <li><a href="#">sit ament</a></li>
+                <li><a href="#">consectetur</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
