Made is main section responsive more than 1000px screens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <section class="nav">
-        <div class="container">
+        <div class="container row">
           <div class="logo-box">
             <h2 class="logo">CRL</h2>
           </div>
